syntax = "proto3";

package api.videoCore.service.v1;

option go_package = "lehu-video/api/videoCore/service/v1;v1";
option java_multiple_files = true;
option java_package = "api.videoCore.service.v1";

import "google/api/annotations.proto";
import "api/videoCore/service/v1/base.proto";

service VideoService {
	rpc FeedShortVideo(FeedShortVideoReq) returns (FeedShortResp){
    option (google.api.http) = {
      post: "/v1/video/feed"
      body: "*";
    };
  };

  rpc GetVideoById(GetVideoByIdReq) returns (GetVideoByIdResp){
    option(google.api.http) = {
      get:"/v1/video/{video_id}"
    };
  };

  rpc PublishVideo(PublishVideoReq) returns(PublishVideoResp){
    option (google.api.http) = {
      post:"/v1/video/publish"
      body:"*"
    };
  };

  rpc ListPublishedVideo(ListPublishedVideoReq) returns (ListPublishedVideoResp){
    option (google.api.http) = {
      post:"/v1/video/list"
      body:"*"
    };
  };

  rpc GetVideoByIdList(GetVideoByIdListReq) returns (GetVideoByIdListResp){}
}

message FeedShortVideoReq {
  int64 latest_time = 1;
  string user_id = 2;
  int64 feed_num = 3;
}

message FeedShortResp {
  Metadata meta = 1;
  repeated Video videos = 2;
}

message Video{
  string id = 1; // 视频唯一标识
  string title = 2; // 视频标题
  Author author = 3; // 视频作者信息
  string play_url = 4; // 视频播放地址
  string cover_url = 5; // 视频封面地址
  int64 favorite_count = 6; // 视频的点赞总数
  int64 comment_count = 7; // 视频的评论总数
  int64 is_favorite = 8; // 0-未点赞，1-已点赞
  string upload_time = 9; // 视频上传时间
  string description = 10; // 视频描述
}

message Author {
  string id = 1; // 作者唯一标识
  string name = 2; // 作者昵称
  string avatar = 3; // 作者头像地址
  int64 is_following = 4; // 0-未关注，1-已关注
}

message GetVideoByIdReq{
  string video_id = 1;
}

message GetVideoByIdResp{
  Metadata meta = 1;
  Video video = 2;
}


message PublishVideoReq {
  string title = 1 ; // 视频标题
  string cover_url = 2 ; // 视频封面地址
  string play_url = 3 ; // 视频播放地址
  string description = 4 ; // 视频描述
  string user_id = 5 ; // 视频作者id
}

message PublishVideoResp {
  Metadata meta = 1;
  string video_id = 2;
}

message ListPublishedVideoReq {
  string user_id = 1;
  int64 latest_time = 2; // 可选参数，限制返回视频的最新投稿时间戳，精确到秒，不填表示当前时间
  PageStatsReq page_stats = 3;
}

message ListPublishedVideoResp {
  Metadata meta = 1;
  repeated Video videos = 2;
  PageStatsResp page_stats = 3;
}

message GetVideoByIdListReq {
  repeated string video_id_list = 1;
}

message GetVideoByIdListResp {
  Metadata meta = 1;
  repeated Video videos = 2;
}